--- a/styles/animals.css
+++ b/styles/animals.css
@@ -3,115 +3,210 @@
 	License: none (public domain)
 */
 
-	html,body,div,span,applet,object,iframe,
-	h1,h2,h3,h4,h5,h6,p,blockquote,pre,
-	a,abbr,acronym,address,big,cite,code,
-	del,dfn,em,img,ins,kbd,q,s,samp,
-	small,strike,strong,sub,sup,tt,var,
-	b,u,i,center,
-	dl,dt,dd,ol,ul,li,
-	fieldset,form,label,legend,
-	table,caption,tbody,tfoot,thead,tr,th,td,
-	article,aside,canvas,details,embed,
-	figure,figcaption,footer,header,hgroup,
-	menu,nav,output,ruby,section,summary,
-	time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
-	
-	/* HTML5 display-role reset for older browsers */
-	article,aside,details,figcaption,figure,
-	footer,header,hgroup,menu,nav,section{display:block;}
-	body{line-height:1;}
-	ol,ul{list-style:none;}
-	blockquote,q{quotes:none;}
-	blockquote:before,blockquote:after,
-	q:before,q:after{content:'';content:none;}
-	table{border-collapse:collapse;border-spacing:0;}
+html,body,div,span,applet,object,iframe,
+h1,h2,h3,h4,h5,h6,p,blockquote,pre,
+a,abbr,acronym,address,big,cite,code,
+del,dfn,em,img,ins,kbd,q,s,samp,
+small,strike,strong,sub,sup,tt,var,
+b,u,i,center,
+dl,dt,dd,ol,ul,li,
+fieldset,form,label,legend,
+table,caption,tbody,tfoot,thead,tr,th,td,
+article,aside,canvas,details,embed,
+figure,figcaption,footer,header,hgroup,
+menu,nav,output,ruby,section,summary,
+time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+
+/* HTML5 display-role reset for older browsers */
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section{display:block;}
+body{line-height:1;}
+ol,ul{list-style:none;}
+blockquote,q{quotes:none;}
+blockquote:before,blockquote:after,
+q:before,q:after{content:'';content:none;}
+table{border-collapse:collapse;border-spacing:0;}
 
 
 /**************************************************************************************
-			Fonts
+		Fonts
 **************************************************************************************/
 
 @font-face {
-    font-family: 'JungleFeverRegular';
-    src: url('../fonts/JungleFever-webfont.eot');
-    src: url('../fonts/JungleFever-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/JungleFever-webfont.woff') format('woff'),
-         url('../fonts/JungleFever-webfont.ttf') format('truetype'),
-         url('../fonts/JungleFever-webfont.svg#JungleFeverRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+font-family: 'JungleFeverRegular';
+src: url('../fonts/JungleFever-webfont.eot');
+src: url('../fonts/JungleFever-webfont.eot?#iefix') format('embedded-opentype'),
+	 url('../fonts/JungleFever-webfont.woff') format('woff'),
+	 url('../fonts/JungleFever-webfont.ttf') format('truetype'),
+	 url('../fonts/JungleFever-webfont.svg#JungleFeverRegular') format('svg');
+font-weight: normal;
+font-style: normal;
 }
 
 
 /**************************************************************************************
-			Main
+		Main
 **************************************************************************************/
 
 body{
-	background-color:#092B02;
-	font-family:Tahoma, Geneva, sans-serif;
+background-color:#092B02;
+font-family:Tahoma, Geneva, sans-serif;
 }
 
 .container{
-	width:960px;
-	margin:40px auto 55px;
-	/*background-color:#EECE62;*/	
-	background-image:url("../images/corkback.jpg");
-	background-repeat:repeat;	
-	box-shadow:inset 3px 3px 7px rgb(0,0,0);
-	position:relative;
+width:960px;
+margin:40px auto 55px;
+/*background-color:#EECE62;*/	
+background-image:url("../images/corkback.jpg");
+background-repeat:repeat;	
+box-shadow:inset 3px 3px 7px rgb(0,0,0);
+position:relative;
 }
 
 .border{
-	position:absolute;
-	z-index:5;
-	top:-25px;
-	left:-25px;
-	background-color:transparent;
-	width:100%;
-	height:100%;	
-	border:25px solid #542401;	
-	border-radius:25px;	
-	box-shadow:5px 5px 10px rgb(0,0,0);	
-	overflow:hidden;
+position:absolute;
+z-index:5;
+top:-25px;
+left:-25px;
+background-color:transparent;
+width:100%;
+height:100%;	
+border:25px solid #542401;	
+border-radius:25px;	
+box-shadow:5px 5px 10px rgb(0,0,0);	
+overflow:hidden;
 }
 
 header{
-	width:960px;
-	text-align:center;
-	padding:15px 0 20px;
+width:960px;
+text-align:center;
+padding:15px 0 20px;
 }
 
 header h1{
-	font-family:'JungleFeverRegular', 'Impact', Tahoma, Geneva, sans-serif;
-	font-size:70px;
+font-family:'JungleFeverRegular', 'Impact', Tahoma, Geneva, sans-serif;
+font-size:70px;
 }
 
 header h4{
-	font-family:'JungleFeverRegular', 'Impact', Tahoma, Geneva, sans-serif;
-	font-size:30px;
+font-family:'JungleFeverRegular', 'Impact', Tahoma, Geneva, sans-serif;
+font-size:30px;
 }
 
 main{
-	padding:0 30px 20px;
-	width:900px;
-	position:relative;
-	z-index:10;
+padding:0 30px 20px;
+width:900px;
+position:relative;
+z-index:10;
 }
 
 footer{
-	width:960px;
-	font-size:12px;
-	padding:10px 0 5px;
-	text-align:center;
-	
-	position:relative;
-	clear:both; /*added because the images are all floating*/
-	z-index:10;
+width:960px;
+font-size:12px;
+padding:10px 0 5px;
+text-align:center;
+
+position:relative;
+clear:both; /*added because the images are all floating*/
+z-index:10;
 }
 
 /**************************************************************************************
-			Special (added in class)
+		Special (added in class)
 **************************************************************************************/
 
+/* using the child (>) selector, we style only the divs that are the direct children of the main,
+and not grandchildren or so on */
+main > div{
+width:900px;
+padding:5px 0;
+clear:both;
+}
+
+/* using the descendant selector (space) to select the div inside of the divs inside of the main */
+main div div{
+width:350px;
+height:400px;
+padding:23px;
+background-color:#FFF;
+border:1px solid #AAA;
+position:relative; /*for holding the before bits (making tape)*/
+z-index:7;
+
+/* in boxshadow, the properties are:
+	x offset
+	y offset
+	length (or size)
+	colour */
+box-shadow:2px 2px 4px rgb(50,50,50);	
+}
+
+/* with nth-child (and nth-of-type), you can used a calculation to target multiple elements 
+ 2 would be only the second
+2n would be every second
+2n - 1 would be every second starting with the first
+2n + 1 would be every second starting with the third 
+there is also nth-last-child and nth-last-of-type which start counting from the bottom */
+main div:nth-child(2n) div{
+float:right;
+/* margin usually pushes other elements away, but a negative margin pulls other elements
+towards - so things look like they are overlapping */
+margin-top:-100px;
+margin-bottom:-100px;
+}
+
+
+
+/* use an attribute selector to style a link based on its top level domain
+= means "matches exactly"
+^= means "begins with"
+$= means "ends with" 
+*= means "contains" */
+a[href*=".org"]{ color: #186b08; }
+a[href*=".org"]:hover{ color: #2ce008; }
+
+a[href$=".com"]{ color: #af4900; }
+a[href$=".com"]:hover{ color: #ff6a00; }
+
+
+/* we can use the pseudo-element 'before' to add a new content area to each div that holds
+a picture (in this case, make it look like a piece of tape) 
+while you can put text content in :before or :after, you cannot add other elements inside */
+main div div::before{
+/* the before and after elements won't exist unless you give them content */
+content:' ';
+width:180px;
+height:50px;
+background-color:rgba(222,222,222,0.6);
+/* use position to put the new pseudo element where you want it to go */
+position:absolute;
+left:105px;
+top:-15px;
+transform:rotate(-5deg);
+}
+
+header h1{
+display:flex;
+justify-content:center;
+}
+
+header h1 span{
+/* :first-letter only works on block elements, spans are inline elements by default
+	so we have to make our spans display:block */
+display:block;
+margin:0 15px;
+}
+
+/* use :first-letter to change the first letter of our heading */
+header h1 span::first-letter{
+font-family: 'Moo Lah Lah', cursive;
+/* the 1.3em will make this font size be 1.3 times the current font size of the h1 */
+font-size:1.3em;
+}
+
+/* selection will style the text when it is highlighted 
+you are limited to font-specific properties, like colour, background, etc. 
+Note: overriding the selection can mess with people's accessibility setting */
+footer::selection, footer a::selection{
+background-color:#ff6a00;
+}
